# convo

./: .gitignore  .travis.yml  Cargo.toml  FORMATTING.md  README.md
.github/workflows/: build.yml  clippy.yml  testing.yml
assets/: .gitkeep
convo-lib/: Cargo.toml
convo-lib/src/: exporter.rs  lib.rs  link.rs  node.rs  parser.rs  tree.rs
convo-lib/tests/: integration_test.rs
examples/: .gitkeep  building.rs  export.rs  io.rs  parsing.rs  walking.rs
examples/dialogue_files/: README.md  ex_1.convo.yml  ex_1.ctree.yml  ex_bad.ctree.yml  ex_min.convo.yml  ex_min.ctree.yml  example.ctree.yml
src/: dialogue_link.rs  dialogue_node.rs  dialogue_tree.rs  error.rs  exporter.rs  importer.rs  io.rs  lib.rs  link.rs  node.rs  parser.rs  tree.rs
tests/: integration_test.rs
