[package]
name = "convo"
description = "A modern dialogue executor and tree parser using YAML, focusing on ease-of-use and speed."
version = "0.1.2"
authors = ["Spencer Imbleau <spencer@imbleau.com>", "Thomas Houtart <thomas.houtart98@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/convo"
documentation = "https://docs.rs/convo"
readme = "README.md"
repository = "https://github.com/simbleau/convo"
keywords = ["dialogue", "conversation", "tree", "yaml"]
categories = ["data-structures", "game-development", "parser-implementations", "text-processing"]
exclude = [
    "assets/",
    "examples/",
    "tests/",
]

[dev-dependencies]
text_io = "0.1.8"

[dependencies]
indexmap = "1.8"
yaml-rust = "0.4.5"
# serde = "1.0" - Waiting on serde/serde_yaml addition
# serde_yaml = "0.8" - Waiting on serde/serde_yaml addition